cmake_minimum_required(VERSION 3.5)

set (PROJECT_NAME "cub-hip")

project(${PROJECT_NAME})

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cub/ DESTINATION include/thrust/system/cuda/detail/cub USE_SOURCE_PERMISSIONS)

# Packaging directives
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VENDOR "AMD")
set(CPACK_PACKAGE_VERSION_MAJOR ${BUILD_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${BUILD_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${BUILD_VERSION_PATCH})
set(CPACK_PACKAGE_CONTACT "Ben Sander (ben.sander@amd.com)")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "An implementation of CUB on the ROCM stack. Currently Beta.")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.TXT")

include(CPack)
